name:                simple
version:             0.7.0.1
synopsis: A minimalist web framework for the WAI server interface
description:

  \Simple\ is \"framework-less\" web framework for Haskell web applications
  based on the WAI server interface (e.g. for use with the warp server).
  \Simple\ does not enforce a particular structure or paradigm for web
  applications. Rather, \Simple\ contains tools to help you create your own
  patterns (or re-create existing ones). \Simple\ is minimalist, providing a
  lightweight base - the most basic \Simple\ app is little more than a WAI
  `Application` with some routing logic. Everything else (e.g. authentication,
  controllers, persistence, caching etc\') is provided in composable units, so
  you can include only the ones you need in your app, and easily replace
  with your own components.
  .
  To get started, create an app skeleton with the `smpl` utility:
  .
  @
    $ cabal install simple
    $ smpl create my_app_name
    $ cd my_app_name
    $ smpl
  @
  .
  See "Web.Simple" for a more detailed introduction.
homepage:            http://simple.cx
license:             LGPL-3
license-file:        LICENSE
author:              Amit Levy, Daniel B. Giffin
maintainer:          amit@amitlevy.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

data-files: template/*.tmpl

executable smpl
  hs-source-dirs: src
  Main-Is: smpl.hs
  ghc-options: -Wall -fno-warn-unused-do-bind
  build-depends:
      base < 6
    , aeson
    , attoparsec
    , bytestring
    , cmdargs
    , directory
    , filepath
    , process
    , setenv
    , simple-templates >= 0.7.0
    , text
    , unordered-containers
    , vector
  default-language: Haskell2010

library
  hs-source-dirs: src
  build-depends:
      base < 6
    , aeson
    , base64-bytestring
    , bytestring
    , conduit
    , directory
    , filepath
    , mime-types
    , monad-peel
    , simple-templates >= 0.7.0
    , wai >= 2.0
    , wai-extra
    , http-types
    , text
    , transformers
    , unordered-containers
    , vector

  ghc-options: -Wall -fno-warn-unused-do-bind

  exposed-modules:
    Web.Simple,
    Web.Simple.Auth,
    Web.Simple.Controller,
    Web.Simple.Responses,
    Web.Simple.Static,
    Web.Simple.Templates,
    Web.Frank,
    Web.REST
  default-language: Haskell2010

source-repository head
  type: git
  location: anonymous@gitstar.com:alevy/simple.git

