name:                simple
version:             0.11.3
synopsis: A minimalist web framework for the WAI server interface
description:

  \Simple\ is \"framework-less\" web framework for Haskell web applications
  based on the WAI server interface (e.g. for use with the warp server).
  \Simple\ does not enforce a particular structure or paradigm for web
  applications. Rather, \Simple\ contains tools to help you create your own
  patterns (or re-create existing ones). \Simple\ is minimalist, providing a
  lightweight base - the most basic \Simple\ app is little more than a WAI
  `Application` with some routing logic. Everything else (e.g. authentication,
  controllers, persistence, caching etc\') is provided in composable units, so
  you can include only the ones you need in your app, and easily replace
  with your own components.
  .
  To get started, create an app skeleton with the `smpl` utility:
  .
  @
    $ cabal install simple
    $ smpl create my_app_name
    $ cd my_app_name
    $ smpl
  @
  .
  See "Web.Simple" for a more detailed introduction.
homepage:            http://simple.cx
Bug-Reports:         http://github.com/alevy/simple/issues
license:             LGPL-3
license-file:        LICENSE
author:              Amit Levy, Daniel B. Giffin
maintainer:          amit@amitlevy.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  LICENSE CHANGELOG.md

data-files: template/*.tmpl

executable smpl
  hs-source-dirs: src
  Main-Is: smpl.hs
  ghc-options: -Wall -fno-warn-unused-do-bind
  default-language: Haskell2010
  build-depends:
      base < 6
    , aeson
    , attoparsec
    , bytestring
    , cmdargs
    , directory
    , filepath
    , process
    , setenv
    , simple-templates >= 0.7.0
    , text
    , unordered-containers
    , vector

library
  hs-source-dirs: src
  build-depends:
      base < 6
    , aeson
    , base64-bytestring
    , blaze-builder
    , bytestring
    , directory
    , filepath
    , mime-types
    , monad-control >= 1.0.0.0
    , mtl
    , simple-templates >= 0.7.0
    , wai >= 3.0
    , wai-extra
    , http-types
    , text
    , transformers
    , transformers-base
    , unordered-containers
    , vector

  ghc-options: -Wall -fno-warn-unused-do-bind

  exposed-modules:
    Web.Simple,
    Web.Simple.Auth,
    Web.Simple.Controller,
    Web.Simple.Controller.Exception,
    Web.Simple.Controller.Trans,
    Web.Simple.Responses,
    Web.Simple.Static,
    Web.Simple.Templates,
    Web.Frank,
    Web.REST
  default-language: Haskell2010

test-suite test-simple
  type: exitcode-stdio-1.0
  hs-source-dirs: test, src
  main-is: Spec.hs
  default-language: Haskell2010
  build-depends:
      base < 6
    , aeson
    , base64-bytestring
    , blaze-builder
    , bytestring
    , directory
    , filepath
    , mime-types
    , monad-control >= 1.0.0.0
    , mtl
    , simple-templates >= 0.7.0
    , wai >= 3.0
    , wai-extra
    , http-types
    , hspec
    , hspec-contrib
    , text
    , transformers
    , transformers-base
    , unordered-containers
    , vector

source-repository head
  type: git
  location: http://github.com/alevy/simple.git
